@@ -148,16 +148,16 @@ def OSConfiguration(index):
     # We neeed more logs ....
 
     if (__verbose__ == 'true'):
-        OSlog("configuration index 0: [" + config[0] + "]")
-        OSlog("configuration index 1: [" + config[1] + "]")  
-        OSlog("configuration index 2: [" + config[2] + "]")              
-        OSlog("configuration index 3: [" + config[3] + "]")
-        OSlog("configuration index 4: [" + config[4] + "]")  
-        OSlog("configuration index 5: [" + config[5] + "]") 
-        OSlog("configuration index 6: [" + config[6] + "]")
-        OSlog("configuration index 7: [" + config[7] + "]")  
-        OSlog("configuration index 8: [" + config[8] + "]")              
-        OSlog("configuration index 9: [" + config[9] + "]")
+        OSlog("configuration index 00: [" + config[0] + "]")
+        OSlog("configuration index 01: [" + config[1] + "]")  
+        OSlog("configuration index 02: [" + config[2] + "]")              
+        OSlog("configuration index 03: [" + config[3] + "]")
+        OSlog("configuration index 04: [" + config[4] + "]")  
+        OSlog("configuration index 05: [" + config[5] + "]") 
+        OSlog("configuration index 06: [" + config[6] + "]")
+        OSlog("configuration index 07: [" + config[7] + "]")  
+        OSlog("configuration index 08: [" + config[8] + "]")              
+        OSlog("configuration index 09: [" + config[9] + "]")
         OSlog("configuration index 10: [" + config[10] + "]") 
         OSlog("configuration index 11: [" + config[11] + "]")
         OSlog("configuration index 12: [" + config[12] + "]") 
